# eCAL

./: .gitignore  CMakeLists.txt  README.md
src/hello_world/: hello_world_rec.cpp  hello_world_snd.cpp
src/learning_proto/: Person.pb.cc  Person.pb.h  Person.proto  proto_rec.cpp  proto_snd.cpp
